Ajustes nas telas Modo de edição adicionado nas telas de cadastro